--- a/index.html
+++ b/index.html
@@ -6,25 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My New LP</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="hero-image"></div>
     <div class="wrappers">
         <header>
-            <a href="#" class="Logo">Shoe<span>Brand</span></a>
+            <a href="#" class="logo">Shoe<span>Brand</span></a>
 
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Sneakers</a></li>
                     <li><a href="#">Players</a></li>
-
-                    <svg class="Close" viewBox="0 0 48 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M24 32H0V26.6667H24V32ZM48 18.6667H0V13.3333H48V18.6667ZM48 5.33333H24V0H48V5.33333Z" fill="white"/>
-                        </svg>
-                        
                 </ul>
             </nav>
+
+            <svg class="Close" viewBox="0 0 48 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M24 32H0V26.6667H24V32ZM48 18.6667H0V13.3333H48V18.6667ZM48 5.33333H24V0H48V5.33333Z" fill="white"/>
+            </svg>
+        
         </header>
 
         <section>
