--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         </header>
 
-        <section>
+        <section class="hero">
             <h1>Regain Your Confidence On the Court</h1>
 
             <p class="sub-head">A shoe built with purpose and to take your game to the next level.</p>
