Unfinished Second Breakpoint

--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
         </section>
 
         <section class="more-info">
-            <div class="feartures">
-                <div class="conent">
+            <div class="features">
+                <div class="content">
                     <p class="title">LightWeight</p>
                     <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse aliquam id consequuntur iusto, voluptatibus molestias!</p>
                     <img src="images/shoe 2.jpg" alt="">
                 </div>
             </div>
-            <div class="feartures flip Left">
-                <div class="conent">
+            <div class="features flip Left">
+                <div class="content">
                     <p class="title">Flexibility</p>
                     <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse aliquam id consequuntur iusto, voluptatibus molestias!</p>
                     <img src="images/Shoe 3.jpg" alt="">
                 </div>
             </div>
-            <div class="feartures">
-                <div class="conent">
+            <div class="features">
+                <div class="content">
                     <p class="title">Durability</p>
                     <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse aliquam id consequuntur iusto, voluptatibus molestias!</p>
                     <img src="images/Shoe 4.jpg" alt="">
