--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
         </section>
 
         <section class="more-info">
-            <div class="features">
+            <div class="feature">
                 <div class="content">
                     <p class="title">LightWeight</p>
                     <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse aliquam id consequuntur iusto, voluptatibus molestias!</p>
                     <img src="images/shoe 2.jpg" alt="">
                 </div>
             </div>
-            <div class="features flip Left">
+            <div class="features Left">
                 <div class="content">
                     <p class="title">Flexibility</p>
                     <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse aliquam id consequuntur iusto, voluptatibus molestias!</p>
                     <img src="images/Shoe 3.jpg" alt="">
                 </div>
             </div>
-            <div class="features">
+            <div class="feature">
                 <div class="content">
                     <p class="title">Durability</p>
                     <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse aliquam id consequuntur iusto, voluptatibus molestias!</p>
