--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                 <div class="content">
                     <p class="title">LightWeight</p>
                     <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse aliquam id consequuntur iusto, voluptatibus molestias!</p>
+                </div>
+                <div class="image-wrapper">
                     <img src="images/shoe 2.jpg" alt="">
                 </div>
             </div>
@@ -59,6 +61,8 @@
                 <div class="content">
                     <p class="title">Flexibility</p>
                     <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse aliquam id consequuntur iusto, voluptatibus molestias!</p>
+                </div>
+                <div class="image-wrapper">
                     <img src="images/Shoe 3.jpg" alt="">
                 </div>
             </div>
@@ -66,6 +70,8 @@
                 <div class="content">
                     <p class="title">Durability</p>
                     <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse aliquam id consequuntur iusto, voluptatibus molestias!</p>
+                </div>
+                <div class="image-wrapper">
                     <img src="images/Shoe 4.jpg" alt="">
                 </div>
             </div>
