--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                     <img src="images/shoe 2.jpg" alt="">
                 </div>
             </div>
-            <div class="feature left">
-                <div class="content2">
+            <div class="feature-left">
+                <div class="content1">
                     <p class="title">Flexibility</p>
                     <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse aliquam id consequuntur iusto, voluptatibus molestias!</p>
                 </div>
-                <div class="image-wrapper8">
+                <div class="image-wrapper1">
                     <img src="images/Shoe 3.jpg" alt="">
                 </div>
             </div>
